[gd_scene load_steps=12 format=3 uid="uid://jt7320igdr8j"]

[ext_resource type="Theme" uid="uid://b7cp6hc23xm1k" path="res://content/themes/dialog_theme.tres" id="1_prr0l"]
[ext_resource type="Script" path="res://content/dialogs/trader_dialog.gd" id="2_nbedt"]
[ext_resource type="Texture2D" uid="uid://cqyndxf7bmku2" path="res://content/graphics/items/potion_red.png" id="3_6d7an"]
[ext_resource type="Texture2D" uid="uid://b2wsdnqxf63k8" path="res://content/graphics/items/heart.png" id="4_1ors0"]
[ext_resource type="Script" path="res://content/dialogs/trade_item.gd" id="4_7plib"]
[ext_resource type="Texture2D" uid="uid://dlpibheo7nm6q" path="res://content/graphics/items/potion_red_small.png" id="4_b8gen"]
[ext_resource type="Script" path="res://content/dialogs/trade_data.gd" id="7_q2vn0"]

[sub_resource type="Resource" id="Resource_x0do5"]
script = ExtResource("4_7plib")
item_icon = ExtResource("4_b8gen")
item_healin_power = 25
price = 5

[sub_resource type="Resource" id="Resource_npexh"]
script = ExtResource("4_7plib")
item_icon = ExtResource("3_6d7an")
item_healin_power = 50
price = 10

[sub_resource type="Resource" id="Resource_5mxgt"]
script = ExtResource("4_7plib")
item_icon = ExtResource("4_1ors0")
item_healin_power = 100
price = 15

[sub_resource type="Resource" id="Resource_ypepc"]
script = ExtResource("7_q2vn0")
name = "game_traderBox_caption"
items = Array[ExtResource("4_7plib")]([SubResource("Resource_x0do5"), SubResource("Resource_npexh"), SubResource("Resource_5mxgt")])

[node name="TraderDialog" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_prr0l")
script = ExtResource("2_nbedt")
trade_data = SubResource("Resource_ypepc")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -46.5
offset_right = 88.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"PanelInner"

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="CaptionLabel" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"CaptionLabel"
text = "game_traderBox_caption"

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"PanelInner"

[node name="ItemsContainer" type="GridContainer" parent="PanelContainer/VBoxContainer/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 16
columns = 3

[connection signal="ready" from="." to="." method="_on_ready"]
